.k8s/b3-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: b3-api-deployment
  namespace: default
  labels:
    app: b3-api-deployment
spec:
  replicas: 1 # number of pods
  template:
    metadata:
      labels:
        app: b3-api-deployment
    spec:
      containers:
        - name: b3-api-containers
          image: us-central1-docker.pkg.dev/b3-api-354219/b3-storage/b3-api
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              protocol: TCP
