.k8s/b3-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: b3-api-service
spec:
  selector:
    app: b3-api
  type: LoadBalancer
  loadBalancerIP: 34.111.153.231
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
