.k8s/b3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: b3-api-deployment
spec:
  selector:
    app: b3-api-deployment
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
