.k8s/b3-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b3-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: b3-api-ip
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: cert-b3-api-tls
  rules:
  - host: rodrigodesoto.com.br
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: b3-api-service
            port:
              number: 80
