.k8s/b3-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: b3-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "b3-api-ip"
spec:
  backend:
    serviceName: b3-api-deployment
    servicePort: 4000
